[gd_scene load_steps=10 format=3 uid="uid://bbx14t18y1rme"]

[ext_resource type="PackedScene" uid="uid://qeygpngl8xvw" path="res://UI/toggle_panels/toggle_panel.tscn" id="1_g6r7a"]
[ext_resource type="Script" path="res://UI/toggle_panels/shapes/shapes_panel.gd" id="2_1wln8"]
[ext_resource type="StyleBox" uid="uid://cl2bjx8ehvcaj" path="res://UI/themes/image_panel_container.tres" id="2_lqd6g"]
[ext_resource type="Theme" uid="uid://dkotf0apjh4dd" path="res://UI/themes/small_buttons_theme.tres" id="3_kkh8i"]
[ext_resource type="Texture2D" uid="uid://q0x7rqp5bev" path="res://art/textures/icons/shapes.png" id="3_lrui6"]
[ext_resource type="Texture2D" uid="uid://cy31h2qbyqyt0" path="res://art/textures/icons/plus.png" id="4_3tu4m"]
[ext_resource type="Texture2D" uid="uid://dmogt7wyvnvqi" path="res://art/textures/icons/deleteall.png" id="5_3p022"]
[ext_resource type="Texture2D" uid="uid://c3kuu10cgj770" path="res://art/textures/icons/upload.png" id="8_urcwe"]
[ext_resource type="PackedScene" uid="uid://deb7m8qovnpdo" path="res://UI/toggle_panels/disable_during_generation_panel_container.tscn" id="9_y0ym2"]

[node name="ShapesPanel" node_paths=PackedStringArray("textures_ui_container") instance=ExtResource("1_g6r7a")]
script = ExtResource("2_1wln8")
textures_ui_container = NodePath("MarginContainer/VBoxContainer/Control/VBoxContainer/ShapePanelContainer/ScrollContainer/MarginContainer/ItemsHFlowContainer")

[node name="TextureRect" parent="MarginContainer/VBoxContainer/HeaderHBoxContainer" index="0"]
texture = ExtResource("3_lrui6")

[node name="TitleLabel" parent="MarginContainer/VBoxContainer/HeaderHBoxContainer" index="1"]
text = "Shapes"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Control" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer" index="0"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_lqd6g")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer/MarginContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="UploadImagesButton" type="Button" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer/MarginContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Load from filesystem"
mouse_default_cursor_shape = 2
theme = ExtResource("3_kkh8i")
icon = ExtResource("8_urcwe")
icon_alignment = 1

[node name="AddPresetButton" type="Button" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer/MarginContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Open preset texture group selector panel"
mouse_default_cursor_shape = 2
theme = ExtResource("3_kkh8i")
icon = ExtResource("4_3tu4m")
icon_alignment = 1

[node name="DeletePresetsButton" type="Button" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer/MarginContainer/HBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Clear all"
mouse_default_cursor_shape = 2
theme = ExtResource("3_kkh8i")
icon = ExtResource("5_3p022")
icon_alignment = 1

[node name="ShapePanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_lqd6g")
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/ShapePanelContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/ShapePanelContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ItemsHFlowContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/ShapePanelContainer/ScrollContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="DisableDuringGenerationPanelContainer" parent="MarginContainer/VBoxContainer/Control" index="1" instance=ExtResource("9_y0ym2")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer/MarginContainer/HBoxContainer/UploadImagesButton" to="." method="_on_upload_images_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer/MarginContainer/HBoxContainer/AddPresetButton" to="." method="_on_add_preset_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/VBoxContainer/OptionsPanelContainer/MarginContainer/HBoxContainer/DeletePresetsButton" to="." method="_on_delete_presets_button_pressed"]
